	-entirely new encounter table, inspired by ORAS
	-some national dex pokemon can be found throughout the game
	-starters can be caught in petalburg, jagged pass, and route 119
	-evolve trade evos through level up or by using their respective item
	-feebas can be found on all water tiles in route 119 (voloved)
	-added chain fishing (ghoulslash)
	-event items are given when you beat the champion

better running
	-run indoors
	-run without running shoes
	-no more running shoes tutorial
	-following pokemon (merrp)

faster menus
	-prompt for reusing repels (ExpoSeed)
	-keyboard auto-switches to lowercase (Jaizu)
	-faster text speed (ellabrella)
	-removed the extra save confirmation (Fyreire)
	-using medicine no longer returns you to the bag automatically (ghoulslash)
	-"move mons" is now the first option in the storage system

new hotkeys
	-pressing b in a battle moves your cursor to "run" (voloved)
	-pressing select while hovering over a pokemon lets you swap its slot (Lunos)
	-pressing start while hovering over a pokemon changes its nickname

misc improvements
	-reusable TMs (Lunos)
 	-forgettable HMs (Lunos, thespbgamer, Jaizu)
	-more bonus premier balls, like in LGPE (BuffelSalt)
	-improved opponent's pokeball throwing animation (seketsu)
	-trainer classes now use different kinds of pokeballs (BuffelSalt)
	-updated box/party icons to match newer generations (merrp)
	-slight adjustment to Brendan's script for when you first meet him
	-tweaked saving text to make sense on both real hardware and emulators
	-larger visibility radius in darkness
	-stereo sound and set style are now enabled by default

bugfixes
	-general bugfixes (built into decomp)
	-improved waitforvblank function, saving battery life and increasing fast forward speed (DizzyEggg)
	-remove move grammar tables, which are unused in the English translation (FieryMewtwo)
	-ground effects are applied when you exit surfing (ghoulslash)
	-allow player to change direction while moving up or down (cbt)