@@ -1258,8 +1258,14 @@ EventScript_CloseMossdeepGameCornerBarrier::
 	return
 
 CableClub_OnResume:
+    specialvar VAR_RESULT, IsWirelessAdapterConnected
+    goto_if_eq VAR_RESULT, FALSE, CableClub_OnResume_DisableUnionRoomNurseText
 	special InitUnionRoom
 	end
+
+CableClub_OnResume_DisableUnionRoomNurseText:
+    setflag FLAG_NURSE_UNION_ROOM_REMINDER
+    end
 
 MossdeepCity_GameCorner_1F_EventScript_InfoMan2::
 	lock
